<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/nameLabelTextView"
            style="@style/AccountLabelTextView"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/AccountTextView"
            android:layout_column="1"
            android:layout_row="0" />


        <TextView
            android:id="@+id/descriptionLabelTextView"
            style="@style/AccountLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_description" />

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/AccountTextView"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:id="@+id/valueLabelTextView"
            style="@style/AccountLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_value" />

        <TextView
            android:id="@+id/valueTextView"
            style="@style/AccountTextView"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:id="@+id/typeLabelTextView"
            style="@style/AccountLabelTextView"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_type" />

        <TextView
            android:id="@+id/typeTextView"
            style="@style/AccountTextView"
            android:layout_column="1"
            android:layout_row="3" />

    </GridLayout>

</ScrollView>
